# test-task-hap-counter

./: .gitignore  Dockerfile  README.md  haplotype_analysis.ipynb  pull_data.sh  pyproject.toml
.cursor/rules/: code-quality.mdc  code-reviewer.mdc  style-guide.mdc  testing-standards.mdc
.devcontainer/: devcontainer.json
output/: haplotype_counts.tsv
src/haplotype_counter/: __init__.py  haplotype_counter.py
test_data/: giab_2023.05.hg002.haplotagged.chr16_28000000_28500000.30x.bam.bai  giab_2023.05.hg002.haplotagged.chr16_28000000_29000000.30x.bam.bai  giab_2023.05.hg002.haplotagged.chr16_28000000_29000000.processed.30x.bam.bai  giab_2023.05.hg002.wf_snp.chr16_28000000_28500000.vcf.gz.tbi  giab_2023.05.hg002.wf_snp.chr16_28000000_29000000.vcf.gz.tbi
tests/: __init__.py  test_haplotype_counter.py  test_haplotype_counter_class.py
tests/data/: malformed.vcf  test_variants.vcf
